AG-3347 - made change to ensure scrollbars are just present in the filter list in the Filters Tool Panel

--- a/packages/ag-grid-community/src/styles/ag-theme-base/sass/_ag-theme-base.scss
+++ b/packages/ag-grid-community/src/styles/ag-theme-base/sass/_ag-theme-base.scss
@@ -723,6 +723,8 @@
             }
 
             .ag-filter-list-panel {
+                flex: 1 1 auto;
+                overflow: auto;
                 > div {
                     &:last-of-type {
                         .ag-group-component.ag-collapsed {
